--- a/src/org/compose/compose.scss
+++ b/src/org/compose/compose.scss
@@ -1,4 +1,4 @@
-.compose-box {
+dialog.compose-box {
   width: 50vw;
   padding: 0;
 
@@ -77,7 +77,7 @@
   }
 }
 @media (max-width: 425px) {
-  .compose-box {
+  dialog.compose-box {
     width: 100vw;
     min-height: 100vh;
     height: auto;
