--- a/src/org/compose/compose.scss
+++ b/src/org/compose/compose.scss
@@ -6,6 +6,10 @@ dialog.compose-box {
     display: flex;
     justify-content: center;
   }
+  .mdl-progress {
+    display: none;
+    width: 100%;
+  }
 
   .message,
   .subject {
