fix #8 and add file-upload functionality

--- a/src/org/sent/message-overlay.scss
+++ b/src/org/sent/message-overlay.scss
@@ -4,7 +4,9 @@
 
   .message {
     margin: 0 auto 10px;
-
+    .attachments {
+      margin: 16px;
+    }
     .mdl-card__title {
       display: block;
       font-weight: normal;
