--- a/src/org/compose/compose.scss
+++ b/src/org/compose/compose.scss
@@ -1,7 +1,9 @@
 dialog.compose-box {
   width: 50vw;
   padding: 0;
-
+  input[type=file] {
+    margin: 8px 0;
+  }
   .compose-box-title {
     display: flex;
     justify-content: center;
@@ -86,4 +88,12 @@ dialog.compose-box {
     min-height: 100vh;
     height: auto;
   }
+}
+.message-sent {
+  position: fixed;
+  top: 64px;
+  z-index: 9999999999999999;
+  color: #ff4081;
+  width: 100vw;
+  text-align: center;
 }
