--- a/src/personal/inbox/inbox.scss
+++ b/src/personal/inbox/inbox.scss
@@ -29,7 +29,7 @@
     }
     .mdl-card__actions {
       text-align: right;
-      position: absolute;
+      position: relative;
       bottom: 0;
     }
     .mdl-card__supporting-text {
